--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_API_URL=http://localhost:8000
-VITE_USE_MOCK=true
+VITE_API_URL=http://localhost:8001
+VITE_USE_MOCK=false
+VITE_DEMO_API_KEY=sU1GtSoN6tAO27ul5E-NgiSwki7oMVg3TxajK6rw9Go
