--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_API_URL=http://localhost:8001
-VITE_USE_MOCK=false
+VITE_USE_MOCK=true
 VITE_DEMO_API_KEY=sU1GtSoN6tAO27ul5E-NgiSwki7oMVg3TxajK6rw9Go
