--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=http://165.22.158.75:8000/api/v1
+VITE_API_URL=http://165.22.158.75:8000
 VITE_USE_MOCK=false
-VITE_DEMO_API_KEY=sU1GtSoN6tAO27ul5E-NgiSwki7oMVg3TxajK6rw9Go
+VITE_DEMO_API_KEY=kMQ6dppUu2yWCyd1T8zZ813O4GfSe6LAV9q94J5AQT4
