--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=http://165.22.158.75:8000
+VITE_API_URL=https://api.driftassure.com
 VITE_USE_MOCK=false
 VITE_DEMO_API_KEY=kMQ6dppUu2yWCyd1T8zZ813O4GfSe6LAV9q94J5AQT4
